[metadata]
name = gufo_loader
version = 1.0.0
author = Gufo Labs
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8

[options.packages.find]
where = src
