[metadata]
name = gufo_loader
version = 1.0.0
author = Gufo Labs
url = https://github.com/gufolabs/gufo_loader/
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = loader, plugin
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls = {
    "Documentation": "https://docs.gufolabs.com/gufo_loader/",
    "Source": "https://github.com/gufolabs/gufo_loader/"
}

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8

[options.packages.find]
where = src
