[metadata]
name = gufo_loader
version = attr:gufo.loader.__version__
author = Gufo Labs
url = https://github.com/gufolabs/gufo_loader/
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = loader, plugin
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls =
    Documentation = https://docs.gufolabs.com/gufo_loader/
    Source Code = https://github.com/gufolabs/gufo_loader/
    Bug Tracker = https://github.com/gufolabs/gufo_loader/issues
    Changelog = https://github.com/gufolabs/gufo_loader/blob/master/CHANGELOG.md

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8

[options.packages.find]
where = src
